# rmqsaver

./: Cargo.toml  readme.md
src/: api.rs  main.rs
