[package]
name = "rmqsaver"
version = "0.1.0"
edition = "2021"
authors = ["peizhenfei"]
description = "restart rabbitmq when network patition occurs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = "z"
panic = "abort"
debug = false


[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
reqwest = {version = "0.11.22", features = ["blocking", "json"] }
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.10.1"
serde = {version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
regex = "1.10.2"
